arrumando link do docker

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="curso">
             <h2>Docker - IFTM Uberlândia Centro</h2>
             <p>Eu aprendi sobre o que é, para o que serve, como criar e gerenciar containers com o Docker</p>
-            <a href="certificados/react-native.pdf"  target="_blank">Ver Certificado</a>
+            <a href="certificados/docker.pdf"  target="_blank">Ver Certificado</a>
         </div>
 
         
